--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* -------  General Styles ------- */
-
 body {
   font-family: "Lato", sans-serif;
 }
@@ -31,7 +29,7 @@ section.alternate-background {
 }
 
 main img {
-  width: 100px;
+  width: 100%;
 }
 
 /* ---  Groups & Items --- */
@@ -54,14 +52,19 @@ main img {
 
 header {
   background-color: #ff385c;
-  padding: 20px 20px 0 20px;
+  padding: 20px 20px 5px 20px;
   text-align: center;
 }
 
 .logo {
   font-family: "Pangolin", cursive;
-  font-size: 72px;
+  font-size: 52px;
   color: #fff;
+}
+
+header nav ul {
+  display : flex;
+  justify-content: center;
 }
 
 header nav ul li {
@@ -82,7 +85,18 @@ header nav ul li a:hover {
 /* -------  Search Form ------- */
 form {
   border: 2px solid #ff385c;
-  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+form .group {
+  justify-content: space-between;
+  width: 100%;
+}
+
+form .item {
+  display: flex;
+  justify-content: space-between;
 }
 
 form label {
@@ -91,8 +105,12 @@ form label {
 
 form select,
 form input {
-  margin-bottom: 20px;
-  width: 180px;
+  width: 200px;
+  background-color: #fff;
+}
+
+form select {
+  width: 208.5px
 }
 
 form button {
@@ -116,4 +134,78 @@ footer p {
   padding: 20px;
 }
 
-/* -------  Media Query ------- */
+/* -------  Media Query (Desktop) ------- */
+
+@media all and (min-width: 480px) {
+
+  header {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 10px 30px;
+      width: 100%;
+  }
+
+  header .logo {
+    font-size: 3rem;
+  }
+
+  header nav ul {
+      list-style: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 8px;
+  }
+
+  section {
+    padding-right: 40px;
+    width: 100%;
+  }
+  form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    margin-left: 5px;
+  }
+
+  form select,
+  form input {
+    width: 100%;
+  }
+
+  form button {
+  font-size: 15px;
+  padding: 10px 10px;
+  width: 100%;
+}
+
+  .group {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  }
+  
+  form .item {
+    width: 20%;
+  }
+
+  .item {
+    flex: 1;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .item-double {
+    flex: 2;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    padding: 10px 30px;
+    width: 100%;
+  }
+}
